--- a/index.html
+++ b/index.html
@@ -4,34 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Spotify</title>
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar-brand">
-          <a class="navbar-item">
-      
-       Spotify Videos</a>
+            <a class="navbar-item">Spotify Videos</a>
         </div>
         <div class="navbar-menu">
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <button class="button is-primary">Perfil</button>
+            <div class="navbar-start">
+                <div class="search-container">
+                    <input type="text" class="search-bar" placeholder="Buscar videos...">
+                </div>
             </div>
-          </div>
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <button class="button is-primary">Perfil</button>
+                </div>
+            </div>
         </div>
-      </nav>
+    </nav>
 
-      <aside class="menu">
-        <p class="menu-label">Menú</p>
-        <ul class="menu-list">
-          <li><a class="is-active">
-      
-       Inicio</a></li>
-          <li><a> Tendencias</a></li>
-          <li><a> Mis Videos</a></li>
-          <li><a> Playlists</a></li>
-        </ul>
-      </aside>
+    <div class="layout">
+        <aside class="menu">
+            <p class="menu-label"><span class="menu-title">Menú</span></p>
+            <ul class="menu-list">
+                <li><a class="is-active">Inicio</a></li>
+                <li><a class="is-active">Tendencias</a></li>
+                <li><a class="is-active">Mis Videos</a></li>
+                <li><a class="is-active">Playlists</a></li>
+            </ul>
+        </aside>
+
+        <main class="video-section">
+            <div class="video-card">
+                <video controls>
+                    <source src="video.mp4" type="video/mp4">
+                    Tu navegador no soporta videos.
+                </video>
+                <div class="video-info">
+                    <h3>Título del Video</h3>
+                    <p>Descripción breve del video.</p>
+                </div>
+            </div>
+        </main>
+    </div>
+
+    <div class="player-bar">
+        <button>⏮️</button>
+        <button>⏯️</button>
+        <button>⏭️</button>
+    </div>
 </body>
 </html>
