--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <script src="https://www.youtube.com/iframe_api"></script>
     <title>Spotify</title>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="navbar-brand">
@@ -31,31 +35,40 @@
         <aside class="menu">
             <p class="menu-label"><span class="menu-title">Menú</span></p>
             <ul class="menu-list">
-                <li><a class="is-active">Inicio</a></li>
-                <li><a class="is-active">Tendencias</a></li>
-                <li><a class="is-active">Mis Videos</a></li>
-                <li><a class="is-active">Playlists</a></li>
+                <li><a class="is-active" onclick="activarTitulo(this)">Inicio</a></li>
+                <li><a class="is-active" onclick="activarTitulo(this)">Tendencias</a></li>
+                <li><a class="is-active" onclick="activarTitulo(this)">Mis Videos</a></li>
+                <li><a class="is-active" onclick="activarTitulo(this)">Playlists</a></li>
             </ul>
         </aside>
 
         <main class="video-section">
             <div class="video-card">
-                <video controls>
-                    <source src="video.mp4" type="video/mp4">
-                    Tu navegador no soporta videos.
-                </video>
+                <div class="player">
+                    <div id="player"></div>
+                </div>
                 <div class="video-info">
-                    <h3>Título del Video</h3>
-                    <p>Descripción breve del video.</p>
+                    <h3 id="tituloVideo"></h3>
+                    <p id="descripcionVideo"></p>
                 </div>
             </div>
         </main>
-    </div>
 
-    <div class="player-bar">
-        <button>⏮️</button>
-        <button>⏯️</button>
-        <button>⏭️</button>
+        <div class="player-bar">
+            <button onclick="changeVideo(1)">⏪</button>
+            <button>⏮️</button>
+            <button id="playPauseBtn">⏯️</button>
+            <button onclick="seekToSecond(30)">⏭️</button>
+            <button onclick="changeVideo(2)">⏩</button>
+        </div>
+
+        <div class="video-list">
+            <h2 id="tituloVideos"></h2>
+            <ul id="video-list"></ul>
+        </div>
+
     </div>
+    <script src="scripts/script.js"></script>
 </body>
+
 </html>
