--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
     <script src="https://www.youtube.com/iframe_api"></script>
     <title>Spotify</title>
 </head>
@@ -19,9 +23,9 @@
         </div>
         <div class="navbar-menu">
             <div class="navbar-start">
-                <div class="search-container">
-                    <input type="text" class="search-bar" placeholder="Buscar videos...">
-                </div>
+                <form class="search-container">
+                    <input type="text" class="search-bar" placeholder="Buscar videos..." aria-label="Buscar videos">
+                </form>
             </div>
             <div class="navbar-end">
                 <div class="navbar-item">
@@ -30,6 +34,7 @@
             </div>
         </div>
     </nav>
+
 
     <div class="layout">
         <aside class="menu">
@@ -56,15 +61,37 @@
 
         <div class="player-bar">
             <button onclick="changeVideo(1)">⏪</button>
-            <button>⏮️</button>
+            <button onclick="seekToSecond(30, 1)">⏮️</button>
             <button id="playPauseBtn">⏯️</button>
-            <button onclick="seekToSecond(30)">⏭️</button>
+            <button onclick="seekToSecond(30, 2)">⏭️</button>
             <button onclick="changeVideo(2)">⏩</button>
         </div>
 
-        <div class="video-list">
+        <!-- <div class="video-list">
             <h2 id="tituloVideos"></h2>
             <ul id="video-list"></ul>
+        </div> -->
+
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner"></div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
 
     </div>
