--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-
     <script src="https://www.youtube.com/iframe_api"></script>
-    <title>Spotify</title>
+    <title>Spotify Videos</title>
 </head>
 
 <body>
     <nav class="navbar">
         <div class="navbar-brand">
             <a class="navbar-item">Spotify Videos</a>
+            <button class="navbar-toggle" aria-label="Toggle navigation" onclick="toggleMenu()">
+                <span class="navbar-toggle-icon">&#9776;</span> <!-- Icono de hamburguesa -->
+            </button>
         </div>
-        <div class="navbar-menu">
+        <div class="navbar-menu" id="navbarMenu">
             <div class="navbar-start">
                 <form class="search-container">
                     <input type="text" class="search-bar" placeholder="Buscar videos..." aria-label="Buscar videos">
@@ -35,9 +35,8 @@
         </div>
     </nav>
 
-
     <div class="layout">
-        <aside class="menu">
+        <aside class="menu" id="sidebarMenu">
             <p class="menu-label"><span class="menu-title">Menú</span></p>
             <ul class="menu-list">
                 <li><a class="is-active" onclick="activarTitulo(this)">Inicio</a></li>
@@ -53,8 +52,8 @@
                     <div id="player"></div>
                 </div>
                 <div class="video-info">
-                    <h3 id="tituloVideo"></h3>
-                    <p id="descripcionVideo"></p>
+                    <h3 id="tituloVideo">Demo Background Sample Video</h3>
+                    <p id="descripcionVideo">Descripción de video de prueba</p>
                 </div>
             </div>
         </main>
@@ -66,11 +65,6 @@
             <button onclick="seekToSecond(30, 2)">⏭️</button>
             <button onclick="changeVideo(2)">⏩</button>
         </div>
-
-        <!-- <div class="video-list">
-            <h2 id="tituloVideos"></h2>
-            <ul id="video-list"></ul>
-        </div> -->
 
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
@@ -93,7 +87,6 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-
     </div>
     <script src="scripts/script.js"></script>
 </body>
